# Brain_ROS

src/bfmc/: CMakeLists.txt  package.xml
src/bfmc/launch/: control.launch  localization.launch
src/bfmc/msg/: bfmc_imu.msg  realsense_imu.msg
src/bfmc/src/hardware/Lanekeep/: lane_keeper.py  processLanekeep.py
src/bfmc/src/hardware/Lanekeep/threads/: threadLanekeep.py  utils.py
src/bfmc/src/hardware/Localization/: coss_localization.py  crop_map.py  initial_odo.py  localization_ICP.py
src/bfmc/src/hardware/YOLO/: processYOLO.py  yolo_detector.py
src/bfmc/src/hardware/YOLO/threads/: threadYOLO.py
src/bfmc/src/hardware/camera/: realsense_publisher.py
src/bfmc/src/hardware/camera/threads/: threadCamera.py
src/bfmc/src/hardware/serialhandler/: command.py  serial_message_converter.py  serial_read.py  serial_write.py
src/bfmc/src/hardware/serialhandler/threads/: threadRead.py  threadWrite.py
src/bfmc/src/utils/lantracker_pi/: coss_laneTracker_pi.py  gradients.py  line.py  perspective.py  tracker.py  window.py
src/bfmc/src/utils/messages/: allMessages.py
src/control/: CMakeLists.txt  package.xml  setup.py
src/control/action/: Control.action
src/control/config/: Competition_track_graph.graphml  range_data.yaml
src/control/launch/: node_to_path.launch
src/control/scripts/: technical_challenge_smach.py
src/control/scripts/control/: control_server.py  mpc.py
src/control/scripts/controller/: control_server.py  mpc.py  pure_pursuit.py
src/utils/localization_icp/: BEV.py  coss_localization.py  crop_map.py  initial_odo.py  localization_ICP.py
(+12 files in other folders)
